Implementa base autenticacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Configurações do Banco local
+spring.datasource.url=jdbc:postgresql://localhost:5432/filmes_imdb
+spring.datasource.username=postgres
+spring.datasource.password=sql-luca
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+api.security.token.secret=${JWT_SECRET : secret-padrao}
