--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,7 +17,8 @@ spring:
           lob:
             non-contextual-creation: true
     show-sql: true
-
+    hibernate:
+      ddlAuto: update
 api:
   security:
     token:
